--- a/messy_todo_project.html
+++ b/messy_todo_project.html
@@ -1,78 +1,90 @@
-
 <!DOCTYPE html>
-<html>
-<head>
-  <title>Messy ToDo</title>
-</head>
-<body>
-  <h1>Todo List</h1>
-  <input id="taskInput" type="text">
-  <button onclick="addTask()">Add Task</button>
-  <ul id="taskList"></ul>
+<html lang="en">
+  <head>
+    <title>Messy ToDo</title>
+    <meta charset="UTF-8" />
 
-  <script>
-    var data = [];
-    var counter = 0;
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  </head>
+  <body>
+    <h1>Todo List</h1>
+    <input id="taskInput" type="text" title="input" />
+    <button onclick="addTask()">Add Task</button>
+    <ul id="taskList"></ul>
 
-    function addTask() {
-      var a = document.getElementById("taskInput");
-      var task = a.value;
-      if (task !== "" && task !== " ") {
-        data[counter] = {
-          id: counter,
-          name: task,
-          done: false
-        };
-        counter++;
-        a.value = "";
-        b();
-      }
-    }
+    <script>
+      let Tasks = [];
+      let counter = 0;
 
-    function b() {
-      var ul = document.getElementById("taskList");
-      ul.innerHTML = "";
-      for (let j = 0; j < data.length; j++) {
-        if (typeof data[j] !== "undefined") {
-          var li = document.createElement("li");
-          li.innerHTML = data[j].name + 
-            " <button onclick='toggle(" + j + ")'>Toggle</button> " +
-            " <button onclick='deleteTask(" + j + ")'>Delete</button>";
-          if (data[j].done === true) {
+      // function validateInput
+      const validateInput = (task) => {
+        if (task === null || task.trim() === "") {
+          alert("Please enter a valid task.");
+          return false;
+        }
+        return true;
+      };
+
+      // function AddTask
+      const addTask = () => {
+        let task_Input = document.getElementById("taskInput");
+        let task = task_Input.value;
+
+        if (validateInput(task)) {
+          Tasks[counter] = {
+            id: counter,
+            name: task,
+            done: false,
+          };
+          counter++;
+          task_Input.value = "";
+          renderList();
+        }
+      };
+      const renderList = () => {
+        const ul = document.getElementById("taskList");
+        ul.innerHTML = "";
+        const fragment = document.createDocumentFragment();
+
+        Tasks.forEach((task, index) => {
+          const li = document.createElement("li");
+          li.textContent = task.name;
+
+          if (task.done) {
             li.style.textDecoration = "line-through";
           }
-          ul.appendChild(li);
+
+          const toggleButton = document.createElement("button");
+          toggleButton.textContent = "Toggle";
+          toggleButton.addEventListener("click", () => toggle(index));
+
+          const deleteButton = document.createElement("button");
+          deleteButton.textContent = "Delete";
+          deleteButton.addEventListener("click", () => deleteTask(index));
+
+          li.appendChild(toggleButton);
+          li.appendChild(deleteButton);
+          fragment.appendChild(li);
+        });
+
+        ul.appendChild(fragment);
+      };
+
+      // function toggle
+      const toggle = (index) => {
+        Tasks[index].done = !Tasks[index].done;
+        renderList();
+        let allDone = Tasks.length > 0 && Tasks.every((task) => task.done);
+        if (allDone) {
+          alert("All tasks done!");
         }
-      }
-    }
-
-    function toggle(index) {
-      if (data[index].done === false) {
-        data[index].done = true;
-      } else {
-        data[index].done = false;
-      }
-      b();
-    }
-
-    function deleteTask(i) {
-      data[i] = undefined; // BAD PRACTICE: Leaves holes in array
-      b();
-    }
-
-    // Extra confusing logic
-    setInterval(() => {
-      var allDone = true;
-      for (var z = 0; z < data.length; z++) {
-        if (data[z] && data[z].done === false) {
-          allDone = false;
-        }
-      }
-      if (allDone && data.length > 0) {
-        console.log("All tasks done!");
-      }
-    }, 10000);
-
-  </script>
-</body>
+      };
+      // function deleteTask
+      const deleteTask = (i) => {
+        Tasks = Tasks.filter((_, index) => index !== i);
+        counter--;
+        renderList();
+      };
+    </script>
+  </body>
 </html>
